# ronor

./: Cargo.toml  README.md  rustfmt.toml
examples/: speak.rs
src/: get_favorites.rs  get_group_volume.rs  get_player_volume.rs  get_playlist.rs  get_playlists.rs  get_volume.rs  init.rs  inventory.rs  lib.rs  load_audio_clip.rs  load_favorite.rs  load_home_theater_playback.rs  load_line_in.rs  load_playlist.rs  login.rs  main.rs  modify_group.rs  now_playing.rs  pause.rs  play.rs  seek.rs  set_group_mute.rs  set_group_volume.rs  set_mute.rs  set_player_mute.rs  set_player_volume.rs  set_volume.rs  skip.rs  skip_to_next_track.rs  skip_to_previous_track.rs  speak.rs  toggle_play_pause.rs
src/subcmds/: get_favorites.rs  get_playlist.rs  get_playlists.rs  get_volume.rs  init.rs  inventory.rs  load_audio_clip.rs  load_favorite.rs  load_home_theater_playback.rs  load_line_in.rs  load_playlist.rs  login.rs  modify_group.rs  now_playing.rs  pause.rs  play.rs  seek.rs  set_mute.rs  set_volume.rs  skip.rs  speak.rs  toggle_play_pause.rs
src/subcommands/: get_favorites.rs  get_playlists.rs  inventory.rs  load_audio_clip.rs  skip.rs  speak.rs
static/: sonos.php
