[package]
name = "ronor"
version = "0.1.0"
authors = ["Mario Lang <mlang@blind.guru>"]
edition = "2018"
license = "MIT"
description = "Sonos smart speaker controller"
repository = "https://github.com/mlang/ronor"
readme = "README.md"
keywords = ["sonos", "smart speaker", "api", "cli", "tts"]
categories = ["API bindings", "Command line utilities"]

[dependencies]
async-std = "1.5"
async-trait = "0.1"
clap = "2"
error-chain = "0.12"
humantime = "1.3"
oauth2 = { version = "=3.0.0-alpha.9", default-features = false, features = ["reqwest-010", "futures-03"] }
reqwest = { version = "0.10", features = ["json"] }
rustyline = "6"
scraper = { version = "0.11.0", default-features = false, features = [] }
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
url = "2.1"
xdg = "2.2"

[profile.release]
opt-level = 'z'
lto = true

[badges]
travis-ci = { repository = "mlang/ronor", branch = "master" }
