[package]
name = "ronor"
version = "0.1.0"
authors = ["Mario Lang <mlang@blind.guru>"]
edition = "2018"
license = "MIT"
description = "Sonos smart speaker controller"
repository = "https://github.com/mlang/ronor"
readme = "README.md"
keywords = ["sonos", "smart speaker", "api", "cli", "tts"]
categories = ["API bindings", "Command line utilities"]

[dependencies]
clap = { version = "3", features = ["cargo"] }
error-chain = "0.12"
humantime = "1.3"
oauth2 = { version = "3", default-features = false, features = ["reqwest-010"] }
reqwest = { version = "0.10", features = ["json"] }
rustyline = "10"
scraper = { version = "0.13", default-features = false, features = [] }
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
url = "2.3"
xdg = "2.4"

[profile.release]
opt-level = 'z'
lto = true

[badges]
travis-ci = { repository = "mlang/ronor", branch = "master" }
